<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">
        <TextView
            android:id="@+id/TextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32dp"
            android:text="@string/createUser"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/user_id2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_user"
            android:imeOptions="actionUnspecified"
            android:maxLines="1"
            android:singleLine="true"
            android:text="username"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="34dp"
            tools:layout_editor_absoluteY="406dp" />

        <EditText
            android:id="@+id/password_id2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            tools:ignore="InvalidImeActionId,MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="451dp" />
        <EditText
            android:id="@+id/passwordConfirm_id2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password_confirm"
            android:imeActionId="@+id/login"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            tools:ignore="InvalidImeActionId,MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="451dp" />

        <Button
            android:id="@+id/singUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sing_up"
            android:onClick="singUp"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/goToLoginPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/goToLoginPage"
            android:onClick="goToLoginPage"
            tools:ignore="OnClick" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>