<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AirplaneActivity">

    <TextView
        android:id="@+id/airplanename"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/airplanename"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtairplanename"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/airplanename"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/manufacturer"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/manufacturer"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtmanufacturer"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/manufacturer"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cost"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="124dp"
        android:text="@string/cost"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtcost"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="112dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/cost"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/capacity"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="168dp"
        android:text="@string/capacity"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtcapacity"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="156dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/manufacturer"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnInsert"
        android:layout_width="83dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="164dp"
        android:text="@string/insert"
        android:textStyle="bold"
        android:onClick="insert"
        app:layout_constraintStart_toEndOf="@+id/txtmanufacturer"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="OnClick" />


    <!--<TextView
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="212dp"
        android:text="@string/capacity"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtdeleteID"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/manufacturer"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btnDelete"
        android:layout_width="83dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="208dp"
        android:text="@string/insert"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/txtmanufacturer"
        app:layout_constraintTop_toTopOf="parent" />-->

    <TextView
        android:id="@+id/watchList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="8dp"
        android:text="@string/watchList"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtmanufacturer" />

    <TextView
        android:id="@+id/textViewDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp"
        android:text=""
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/watchList" />
</androidx.constraintlayout.widget.ConstraintLayout>